@@ -1,0 +1,192 @@
+weierp=8472
+supe=8839
+image=8465
+ecirc=234
+Otilde=213
+uacute=250
+diams=9830
+ntilde=241
+dArr=8659
+Ecirc=202
+ograve=242
+yacute=253
+times=215
+iuml=239
+rArr=8658
+micro=181
+rceil=8969
+plusmn=177
+there4=8756
+nabla=8711
+lsaquo=8249
+rang=9002
+Iuml=207
+real=8476
+sup3=179
+sube=8838
+acirc=226
+sup2=178
+sup1=185
+lsquo=8216
+Acirc=194
+sect=167
+notin=8713
+radic=8730
+ocirc=244
+oplus=8853
+euml=235
+Oacute=211
+rfloor=8971
+rdquo=8221
+Ocirc=212
+Igrave=204
+minus=8722
+trade=8482
+szlig=223
+Agrave=192
+forall=8704
+laquo=171
+cedil=184
+Euml=203
+ensp=8194
+Egrave=200
+otilde=245
+lowast=8727
+uml=168
+perp=8869
+int=8747
+nbsp=160
+Oslash=216
+Ugrave=217
+auml=228
+part=8706
+gt=62
+ouml=246
+ge=8805
+para=182
+empty=8709
+Auml=196
+isin=8712
+ang=8736
+uarr=8593
+agrave=224
+Ouml=214
+and=8743
+cap=8745
+exist=8707
+oline=8254
+egrave=232
+rsquo=8217
+oacute=243
+frac34=190
+larr=8592
+amp=38
+lrm=8206
+Atilde=195
+iquest=191
+infin=8734
+reg=174
+igrave=236
+sbquo=8218
+ucirc=251
+Ucirc=219
+yuml=255
+copy=169
+nsub=8836
+prime=8242
+raquo=187
+Ccedil=199
+Prime=8243
+hearts=9829
+oslash=248
+ugrave=249
+harr=8596
+brvbar=166
+Dagger=8225
+equiv=8801
+quot=34
+ordm=186
+deg=176
+bull=8226
+alefsym=8501
+frac14=188
+frac12=189
+ordf=170
+Iacute=205
+sim=8764
+zwnj=8204
+lfloor=8970
+otimes=8855
+rsaquo=8250
+Aacute=193
+uuml=252
+ndash=8211
+clubs=9827
+sup=8835
+atilde=227
+spades=9824
+sum=8721
+not=172
+loz=9674
+curren=164
+shy=173
+Eacute=201
+or=8744
+thinsp=8201
+sdot=8901
+aring=229
+sub=8834
+uArr=8657
+pound=163
+bdquo=8222
+Aring=197
+Uuml=220
+darr=8595
+Uacute=218
+cong=8773
+Ntilde=209
+ccedil=231
+aelig=230
+lArr=8656
+emsp=8195
+rarr=8594
+Ograve=210
+lceil=8968
+thorn=254
+Yacute=221
+euro=8364
+permil=8240
+dagger=8224
+ni=8715
+cent=162
+ne=8800
+cup=8746
+lang=9001
+asymp=8776
+THORN=222
+aacute=225
+AElig=198
+crarr=8629
+acute=180
+ETH=208
+iexcl=161
+icirc=238
+eacute=233
+divide=247
+eth=240
+hArr=8660
+ldquo=8220
+Icirc=206
+macr=175
+rlm=8207
+yen=165
+iacute=237
+hellip=8230
+middot=183
+prop=8733
+lt=60
+frasl=8260
+mdash=8212
+zwj=8205
+prod=8719
+le=8804
