@@ -53,7 +53,7 @@ imapCredSrc=session
 # Define if IMAP server supports ACLs. Possible values: true/false/auto
 # NOTE: Value "auto" means to use server-defined ACL support as indicated
 # through response to IMAP command "CAPABILITY"
-imapSupportsACL=false
+imapSupportsACL=auto
 
 # Enable/disable SMTP Authentication
 smtpAuthentication=true
