@@ -24,7 +24,7 @@ com.openexchange.push.udp.senderAddress: <UDPSENDERADDRESS>
 
 com.openexchange.push.udp.multicastEnabled:true
 
-com.openexchange.push.udp.multicastAddress:224.1.1.1
+com.openexchange.push.udp.multicastAddress:224.0.0.1
 
 com.openexchange.push.udp.multicastPort:9982
 
