@@ -15,6 +15,9 @@ UPLOAD_DIRECTORY=/tmp/
 # If this value is set to 0 and not overridden by the module config or user config uploads will be unrestricted.
 MAX_UPLOAD_SIZE=33554432
 
+# The max. idle time for an uploaded file temporary stored in upload directory
+MAX_UPLOAD_IDLE_TIME_MILLIS=300000
+
 # DEFAULT ENCODING FOR INCOMING HTTP REQUESTS
 # This value MUST be equal to web server's default encoding
 DefaultEncoding=UTF-8
