@@ -19,3 +19,4 @@ com.openexchange.groupware.calendar.update.AlterCreatingDate
 com.openexchange.groupware.update.tasks.TaskReminderFolderZero
 # Version 7
 com.openexchange.groupware.update.tasks.NewAdminExtensionsUpdateTask
+com.openexchange.groupware.calendar.update.UpdateFolderIdInReminder
