@@ -1,3 +1,7 @@
+* 2007-08-16 - marcus.klein@open-xchange.com
+
+ - Bugfix #8907: Inserted actual configuration parameters.
+
 * 2007-08-08 - marcus.klein@open-xchange.com
 
  - Bugfix #8712: Added WebDAV override for GMX WebDAV client.
